--- a/config/database.yml
+++ b/config/database.yml
@@ -21,4 +21,8 @@ test:
 
 production:
   <<: *default
-  database: votos_test
+  database: <%= ENV['RDS_DB_NAME'] %>
+  username: <%= ENV['RDS_USERNAME'] %>
+  password: <%= ENV['RDS_PASSWORD'] %>
+  host: <%= ENV['RDS_HOSTNAME'] %>
+  port: <%= ENV['RDS_PORT'] %>
